migrating to Neo4j 4.0: fix tests